fixed some errors in api doc. Changed put operation to post, but im not sure
